Fix positioning of elements on mobile view

--- a/src/styles/_AboutPage.scss
+++ b/src/styles/_AboutPage.scss
@@ -1,82 +1,86 @@
 .AboutPage {
+  display: grid;
+  grid-template-columns: 1fr;
+  grid-template-rows: minmax(100px, 300px) minmax(300px, 1fr) 50px;
   position: absolute;
   top: 0;
   left: 0;
   height: 100%;
   width: 100%;
+  z-index: 1;
   .main-header {
+    display: flex;
     font-weight: 100;
+    width: 100%;
     .hi {
-      display: block;
       font-size: 4rem;
       margin-left: 15%;
       width: max-content;
     }
     .bohdan {
+      align-self: center;
+      height: max-content;
       width: max-content;
-      display: block;
       font-size: 2rem;
-      margin: 0 auto;
       opacity: 0;
-      position: relative;
       transform-origin: top right;
       transform: rotate(-15deg);
       animation: fade-in 1.2s 1s ease-in-out forwards;
     }
   }
 
-  .sub-header {
+  .main-display {
+    min-width: 320px;
     font-weight: 150;
-    .play-drums {
-      font-size: 1.5rem;
-      transform-origin: top left;
-      transform: rotate(5deg);
-      opacity: 0;
-      position: absolute;
-      top: 48%;
-      left: 36%;
-      animation: fade-in 1.2s 2.5s ease-in-out forwards;
-    }
-    .click-me {
-      @extend .play-drums;
-      font-size: 1rem;
-      top: 53%;
-      animation: fade-in 1.2s 3s ease-in-out forwards;
-    }
-    .make-apps {
-      font-size: 1.6rem;
-      opacity: 0;
-      position: absolute;
-      top: 85%;
-      left: 20%;
-      animation: fade-in 1.2s 3.5s ease-in-out forwards;
-      a {
-        color: $primary-col;
-        transition: color .3s;
-        &:hover {
-          color: $hover-col;
-          cursor: pointer;
+    justify-self: center;
+    position: relative;
+      .play-drums {
+        display: inline-block;
+        font-size: 1.5rem;
+        line-height: 1.1;
+        transform-origin: top left;
+        transform: rotate(5deg);
+        opacity: 0;
+        animation: fade-in 1.2s 2.5s ease-in-out forwards;
+      }
+      .click-me {
+        @extend .play-drums;
+        font-size: 1rem;
+        animation: fade-in 1.2s 3.5s ease-in-out forwards;
+      }
+      .make-apps {
+        position: absolute;
+        bottom: 10px;
+        width: 100%;
+        text-align: center;
+        font-size: 1.6rem;
+        opacity: 0;
+        animation: fade-in 1.2s 4.5s ease-in-out forwards;
+        a {
+          color: $primary-col;
+          transition: color .3s;
+          &:hover {
+            color: $hover-col;
+            cursor: pointer;
+          }
         }
       }
-    }
-  }
-
-  .drummer {
-    position: absolute;
-    top: 36%;
-    float: left;
-    padding-left: 13px;
-    -webkit-clip-path: polygon(14px 142px, 16px 67px, 39px 39px, 63px 33px, 74px 0px, 121px 0px, 144px 56px, 101px 83px, 108px 144px, 162px 133px, 172px 164px, 195px 216px, 193px 247px, 34px 234px);
-    clip-path: polygon(14px 142px, 16px 67px, 39px 39px, 63px 33px, 74px 0px, 121px 0px, 144px 56px, 101px 83px, 108px 144px, 162px 133px, 172px 164px, 195px 216px, 193px 247px, 34px 234px);
-    &:hover {
-      cursor: pointer;
+      .drummer {
+      float: left;
+      padding-left: 13px;
+      -webkit-clip-path: polygon(14px 142px, 16px 67px, 39px 39px, 63px 33px, 74px 0px, 121px 0px, 144px 56px, 101px 83px, 108px 144px, 162px 133px, 172px 164px, 195px 216px, 193px 247px, 34px 234px);
+      clip-path: polygon(14px 142px, 16px 67px, 39px 39px, 63px 33px, 74px 0px, 121px 0px, 144px 56px, 101px 83px, 108px 144px, 162px 133px, 172px 164px, 195px 216px, 193px 247px, 34px 234px);
+      shape-outside: polygon(14px 142px, 16px 67px, 39px 39px, 63px 33px, 74px 0px, 121px 0px, 144px 56px, 101px 83px, 108px 144px, 162px 133px, 172px 164px, 195px 216px, 193px 247px, 34px 234px);
+      -webkit-shape-outside: polygon(14px 142px, 16px 67px, 39px 39px, 63px 33px, 74px 0px, 121px 0px, 144px 56px, 101px 83px, 108px 144px, 162px 133px, 172px 164px, 195px 216px, 193px 247px, 34px 234px);
+      shape-margin: 10px;
+      &:hover {
+        cursor: pointer;
+      }
     }
   }
 
   .disclaimer {
     font-size: 0.9rem;
-    position: absolute;
-    bottom: 0;
     width: 100%;
     text-align: center;
   }
