--- a/src/styles/_Header.scss
+++ b/src/styles/_Header.scss
@@ -6,4 +6,5 @@
   justify-content: flex-end;
   position: relative;
   width: 100%;
+  z-index: 10;
 }
